# fakelab_menucommands

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/fl_cmd/: __init__.py
tests/: smoke_test.py
